<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/BlackLine"
        android:layout_width="170dp"
        android:layout_height="777dp"
        android:layout_marginStart="273dp"
        android:alpha="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blackline" />

    <ImageView
        android:id="@+id/GreenLine"
        android:layout_width="200dp"
        android:layout_height="802dp"
        android:layout_marginEnd="248dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greenline" />

    <ImageView
        android:id="@+id/Triangle"
        android:layout_width="430dp"
        android:layout_height="741dp"
        android:alpha="0.9"
        app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:srcCompat="@drawable/redtriangle" />

    <TextView
        android:id="@+id/ChooseHosp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="54dp"
        android:text="@string/Choose_Hospital"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/BlackLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spnHospital"
        android:layout_width="186dp"
        android:layout_height="27dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:background="#CA7D7D"
        android:entries="@array/hospitals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="60dp"
        android:background="#29753E"
        android:text="@string/select_status"
        android:textColor="#040303"
        android:textColorHighlight="#000000"
        android:textColorHint="#040404"
        android:textColorLink="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="251dp"
        android:scaleX="1.2"
        android:scaleY="1.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/edtNewTitle"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="180dp"
        android:alpha="1"
        android:background="@color/design_default_color_secondary"
        android:hint="@string/enter_new_Doctor"
        android:textColorHighlight="#000000"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#0A5926"
        android:hapticFeedbackEnabled="true"
        android:text="@string/save"
        android:textColor="#101010"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchStatus"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#7E2009"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChooseHosp"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="194dp"
        android:layout_height="136dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toTopOf="@+id/edtNewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spnHospital"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#A3E0B7B7"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/spnHospital" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
